# identity_service_banking_ekyc

./: .dockerignore  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: ekyc_endpoints.py  health_endpoints.py  user_endpoints.py
app/core/: config.py  constants.py  container.py  database.py  ecode.py  exceptions.py  middleware.py
app/dto/: base_response.py
app/dto/ekyc/request/: login_request.py  upload_photos_request.py
app/dto/ekyc/response/: login_response.py  upload_photos_response.py
app/dto/user/request/: get_user_request.py  login_request.py  register_request.py
app/dto/user/response/: get_user_response.py  login_response.py  register_response.py
app/model/: __init__.py  base_model.py  user_face_model.py  user_model.py
app/repository/: __init__.py  base_repository.py  user_face_repository.py  user_repository.py
app/service/: __init__.py  ekyc_service.py  pubsub_service.py  user_service.py
app/service/base/: __init__.py  base_service.py
app/service/ekyc/: __init__.py  ekyc_service.py  ekyc_service_login_result.py  ekyc_service_upload_result.py
app/service/pubsub/: __init__.py  pubsub_service.py
app/service/user/: __init__.py  user_service.py
app/util/: security.py
docs/: DEPLOYMENT.md
tests/service/: ekyc_service_test.py  user_service_test.py
