[project]
name = "identity-service-banking-ekyc-api"
version = "0.1.0"
description = "A banking eKYC API for identity services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "dependency-injector>=4.48.3",
   "fastapi[standard]>=0.128.0",
   "loguru>=0.7.3",
   "psycopg2-binary>=2.9.11",
   "pyyaml>=6.0",
   "ruff>=0.15.1",
   "sqlmodel>=0.0.31",
]

[project.scripts]
dev = "fastapi:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
